--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["Bottombar", "leftsidebar", "Topbar"]
+  "cSpell.words": ["Bottombar", "leftsidebar", "onboarded", "Topbar"]
 }
