chore: designed and implemented the profile page and show the threads on it chore: implemented the search page and form chore: created the required components for these pages

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-  "cSpell.words": ["Bottombar", "leftsidebar", "onboarded", "Topbar"]
+  "cSpell.words": [
+    "Bottombar",
+    "leftsidebar",
+    "onboarded",
+    "Searchbar",
+    "Topbar"
+  ]
 }
