--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.279.0",
+    "mongodb": "^7.0.0",
     "mongoose": "^7.5.3",
     "next": "latest",
     "react": "latest",
