Fix Next.js 15+ breaking changes and profile navigation
- Updated all dependencies to latest versions
- Migrated Clerk v4 -> v6 (auth() API, clerkMiddleware)
- Migrated UploadThing v5 -> v7 (new imports, UPLOADTHING_TOKEN)
- Updated Next.js config for v16 (experimental.serverActions structure)
- Fixed params Promise in dynamic routes (Next.js 15+ breaking change)
- Fixed profile link mutation issue in sidebars
- Added onboarding checks to all protected pages
- Created missing /profile/edit page
- Fixed MongoDB ObjectId serialization for client components

--- a/.env.example
+++ b/.env.example
@@ -9,5 +9,4 @@ NEXT_CLERK_WEBHOOK_SECRET=whsec_your_webhook_secret
 MONGODB_URL=mongodb+srv://USER:PASSWORD@CLUSTER.mongodb.net/threads
 
 # UploadThing
-UPLOADTHING_SECRET=ut_secret_your_uploadthing_secret
-UPLOADTHING_APP_ID=ut_app_your_uploadthing_app_id
+UPLOADTHING_TOKEN=
